--- a/render.yaml
+++ b/render.yaml
@@ -20,6 +20,9 @@ services:
     env: static
     buildCommand: "npm install && npm run build"
     staticPublishPath: ./dist
+    envVars:
+      - key: VITE_BACKEND_URL
+        value: https://aditya-portfolio-backend.onrender.com
     headers:
       - path: /*
         name: Cache-Control
